@@ -1,0 +1,24 @@
+﻿using GameEngine.Graphics;
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace GameEngine.Entities.Particles
+{
+    class Particle : Entity
+    {
+
+
+        public override void Render(Screen screen)
+        {
+            throw new NotImplementedException();
+        }
+
+        public override void Update()
+        {
+            throw new NotImplementedException();
+        }
+    }
+}
